syntax = "proto3";
package pb;

import "collection.proto";
option go_package = "github.com/techschool/simplebank/pb";

message CreateCollectionRequest {
    string collection_name = 1;
    string collection_description = 2;
    string thumbnail_image = 3;
    string header_image = 4;
}

message CreateCollectionResponse {
    Collection collection = 1;
}